fix(checkbox): change flex alignment

--- a/src/Toggles/Checkbox.module.scss
+++ b/src/Toggles/Checkbox.module.scss
@@ -52,3 +52,8 @@
     border-color: var(--colors-neutral-dark);
   }
 }
+
+.label {
+  display: inline-block;
+  padding-block-start: 0.93rem;
+}
